feat(template): 템플릿 도메인 개선